<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_problem_black_24dp"
            android:title="@string/report"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
